test/files/neg/t6426.scala
class A {
  import collection.{mutable => _, _}

  println(`_`.Buffer(0))
}
